--- a/src/scroll.css
+++ b/src/scroll.css
@@ -4,29 +4,32 @@ body {
   overflow-x: hidden;
   padding: 0;
   margin: 0;
-  background: linear-gradient(180deg, #40f, #05f);
+
 }
 
 .wrapper {
-  width: 150px;
-  height: 150px;
+  width: 50px;
+  height: 50px;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+
+  transform: translateX(-30%) translateY(-30%);
 }
 
 .container {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 30px;
+  background: red;
+  border-radius: 6px;
+  position: absolute;
+top:50px;
+left:50px;
 }
 
-.item {
+/* .item {
   width: inherit;
   height: inherit;
-  background: white;
+  background: #000;
   transform-origin: 50% 100%;
 }
+ */
