--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ div.Scroll div.BlurBackground{
 }
 
 #root{
-  overflow:hidden!important;
+/*  overflow:hidden!important; */
   width: 375px!important;
   height: 812px!important;
   position: absolute;
