--- a/src/scroll.css
+++ b/src/scroll.css
@@ -1,28 +1,28 @@
 body {
   width: 100vw;
-  height: 300vh;
-  overflow-x: hidden;
+  height: 200vh;
+  //overflow-x: hidden;
   padding: 0;
   margin: 0;
 
 }
 
 .wrapper {
-  width: 50px;
+  width: 60px;
   height: 50px;
   position: fixed;
 
   transform: translateX(-30%) translateY(-30%);
 }
 
-.container {
+.scontainer {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: red;
+  //background: red;
   border-radius: 6px;
   position: absolute;
-top:50px;
+top:70px;
 left:50px;
 }
 
