--- a/src/scroll.css
+++ b/src/scroll.css
@@ -1,11 +1,11 @@
-body {
+/* body {
   width: 100vw;
   height: 200vh;
   //overflow-x: hidden;
   padding: 0;
   margin: 0;
 
-}
+} */
 
 .wrapper {
   width: 60px;
@@ -19,11 +19,10 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  //background: red;
   border-radius: 6px;
   position: absolute;
-top:70px;
-left:50px;
+  top:70px;
+  left:50px;
 }
 
 /* .item {
