--- a/src/scroll.css
+++ b/src/scroll.css
@@ -1,11 +1,11 @@
-/* body {
-  width: 100vw;
+/*   body {
+  width: 375px;
   height: 200vh;
-  //overflow-x: hidden;
+  overflow-x: scroll;
   padding: 0;
   margin: 0;
 
-} */
+}     */
 
 .wrapper {
   width: 60px;
