--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ div.BlurBackground{
 }
 
 #root{
- 
+ position: absolute;
   width: 375px!important;
   height: 812px!important; 
 } 
@@ -50,3 +50,11 @@ div.ListCard{
   border:1px solid #000;
 } 
 
+body {
+ height:auto;
+ width:100vw;
+  }
+/*   html {
+    overflow-x:hidden;
+    overflow-y:auto;
+    } */
