--- a/src/Component/Component.css
+++ b/src/Component/Component.css
@@ -3,24 +3,22 @@
    box-shadow:0 0 0 0.1rem
 }
 
-.accordion-button:focus{
-    border-color: #fff !important;
-    box-shadow: 0 0 0 .0rem !important;
-    background-color:#fff !important;
-
+.carousel-control-next,
+.carousel-control-prev{
+display: none !important;
 }
-.accordion-button:not(.collapsed){
-    color:#fff !important;
-    background-color:#fff !important;
-    box-shadow: 0 0 0 .0rem !important;
+.nav-link,
+.nav-link.active,
+.nav-tabs{
+border:none !important;
+background:#f7f7f7 !important;
 }
-.accordion-button::after
-.accordion-button:not(.collapsed)::after{
-    background-image:auto !important;
+.nav-link{
+color:red!important;
 }
-button.accordion-button{
-border-radius: 50px !important;
+.nav-link.active{
+    color:black!important;
+   font-weight:bold!important;
+   font-size: 17px!important;
 }
-div.accordion{
-    border-radius: 50px !important;
-    }
+    
