--- a/src/Component/Component.css
+++ b/src/Component/Component.css
@@ -11,7 +11,16 @@
 .nav-link.active,
 .nav-tabs {
   border: none !important;
+  background: #fff !important;
+}
+
+.dropdown-item:hover {
+  color: #415fff !important;
   background: #f7f7f7 !important;
+}
+.navbar-nav .nav-link:hover {
+  border: none !important;
+  color: #415fff !important;
 }
 /* .nav-link{
 color:red!important;
