--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.vsc-initialized {
+  display: contents !important;
+}
