--- a/src/Component/Component.css
+++ b/src/Component/Component.css
@@ -71,3 +71,9 @@ div.AlertPageMask .ant-carousel .slick-dots li.slick-active {
 .ant-carousel .slick-dots {
   top: 688px;
 }
+p.MuiTypography-root.MuiTypography-body2.css-r40f8v-MuiTypography-root {
+  top: -58px !important;
+  left: 90px !important;
+  font-size: 15px !important;
+  position: absolute !important;
+}
