--- a/src/css/Component.css
+++ b/src/css/Component.css
@@ -97,3 +97,6 @@ span.css-14pt78w-MuiSlider-rail {
   color: #fff !important;
   background: linear-gradient(0.25turn, #579ef8, #5ed5ff) !important;
 }
+.css-70qvj9 {
+  display: grid !important;
+}
