--- a/src/App.css
+++ b/src/App.css
@@ -51,10 +51,13 @@ div.ListCard {
     overflow-y:auto;
     } */
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 576px) {
   .Background {
     height: 100vh !important;
     background-repeat: no-repeat !important;
+  }
+  .DownloadBtn {
+    display: none;
   }
 }
 @media screen and (max-width: 992px) {
@@ -65,7 +68,7 @@ div.ListCard {
   #HomePageScreen {
     display: grid !important;
   }
-  .DownloadBtn,
+
   .MainTitle {
     display: none;
   }
