--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ div.ListCard {
     height: 100vh !important;
     background-repeat: no-repeat !important;
   }
+  .DownloadText,
   .DownloadBtn {
     display: none;
   }
