--- a/src/css/Component.css
+++ b/src/css/Component.css
@@ -100,3 +100,7 @@ span.css-14pt78w-MuiSlider-rail {
 .css-70qvj9 {
   display: grid !important;
 }
+/* div.NS div div div {
+  display: none !important;
+}
+ */
