--- a/src/css/Wheel.css
+++ b/src/css/Wheel.css
@@ -82,3 +82,14 @@
   position: absolute;
   justify-content: flex-end;
 }
+/* div.wheel.keen-slider {
+  height: 812px;
+  padding-top: 110px;
+  padding-bottom: 502px;
+}
+
+div.wheel--perspective-left,
+div.wheel--perspective-right {
+  height: 812px;
+}
+ */
