--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,8 @@ div.ListCard {
     display: none;
   }
 }
+@media screen and (min-width: 375px) {
+  .ScreenCenter {
+    height: 800px !important;
+  }
+}
