--- a/src/css/Component.css
+++ b/src/css/Component.css
@@ -145,3 +145,6 @@ div#Clock .ant-tabs-tab .ant-tabs-tab-btn {
 div#Clock div.ant-tabs-tab {
   padding-top: 40px !important;
 }
+div.DemoList div.wheel.keen-slider div.wheel__inner {
+  height: 36px !important;
+}
