--- a/src/css/Component.css
+++ b/src/css/Component.css
@@ -148,3 +148,7 @@ div#Clock div.ant-tabs-tab {
 div.DemoList div.wheel.keen-slider div.wheel__inner {
   height: 36px !important;
 }
+/* #ClockIcon:active {
+  src: url(https://y.qichejiashi.com/tupian/upload/161088749.jpg) !important;
+}
+ */
